--- a/tapcircles.html
+++ b/tapcircles.html
@@ -8,11 +8,22 @@
     <link rel="stylesheet" type="text/css" href="circles.css">
     <script type="text/paperscript" canvas="myCanvas">
 
+        var circles = [];
+
         function onKeyDown(event) {
             var maxPoint = new Point(view.size.width, view.size.height);
             var randomPoint = Point.random();
             var point = maxPoint * randomPoint;
-            new Path.Circle(point, 10).fillColor = 'red';
+            var newCircle = new Path.Circle(point, 500);
+            newCircle.fillColor = "red";
+            circles.push(newCircle);
+        }
+
+        function onFrame(event) {
+            for(var i = 0; i < circles.length; i++) {
+                circles[i].fillColor.hue += 1;
+                circles[i].scale(.9);
+            }
         }
 
     </script>
